# whitespine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
c++/: CMakeLists.txt  Constants.h  Engine.cpp  Engine.h  EngineOptions.cpp  EngineOptions.h  Options.cpp  Options.h  SearchOptions.cpp  SearchOptions.h  UciProtocol.cpp  UciProtocol.h  main.cpp
src/: engine.rs  engine_command.rs  heuristic.rs  heuristic_type.rs  infra.rs  main.rs  neural_network.rs  piece_value.rs  search_options.rs  uci_options.rs  uci_protocol.rs  version.rs
src/neural_networks/: mod.rs  net_input_factory.rs  net_input_v1.rs  net_input_v2.rs  net_input_version.rs
