[package]
name = "whitespine"
authors = ["Miloslav Macurek"]
version = "1.3.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
tract-onnx = "0.21.15"
tract-linalg = { version = "0.21.15", features = ["multithread-mm"] }
